# test_actions

./: CMakeLists.txt  LICENSE  README.md  action.yml  hello.cpp
.github/workflows/: build.yml
tests/: test.cpp
